--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "akari",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "description": "A simple Discord music bot",
   "main": "index.js",
   "scripts": {
