--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": ".",
-    "token": "OTI5MDM4MjE1MTk5OTg5NzYw.YdhgQw.Mz93ddcdHM9lWqNJDfkgIvIhHF4",
+    "token": "BOT_TOKEN",
     "emoji": {
         "play": "▶️",
         "stop": "⏹️",
