--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": ".",
-    "token": "BOT_TOKEN",
+    "token": "process.env.BOT_TOKEN",
     "emoji": {
         "play": "▶️",
         "stop": "⏹️",
