--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@discordjs/rest": "^0.2.0-canary.0",
     "@discordjs/voice": "^0.7.5",
     "@distube/soundcloud": "^1.0.0",
-    "axios": "^0.24.0",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.0",
     "distube": "^3.0.5",
     "ffmpeg-static": "^4.4.1",
     "libsodium-wrappers": "^0.7.9",
+    "node-fetch": "^3.1.0",
+    "querystring": "^0.2.1",
     "ytdl-core": "^4.9.2",
     "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
