Added eval command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "embedColour": "#ede0ab",
+    "devID": "450801410829844480",
     "modRoleID": "944834202279481394",
     "prefix": ".",
     "emoji": {
